Update задание2 - тестирование.md

--- a/задание2 - тестирование.md
+++ b/задание2 - тестирование.md
@@ -41,5 +41,6 @@ test_main.py .
 https://pytest-docs-ru.readthedocs.io/ru/latest/getting-started.html
 https://habr.com/ru/articles/448782/ (опционально, только начало)
 
-
 Читать нужно только в том объеме, который необходим для выполнения задания. 
+
+Мэтиз - стр 163 - хранение функций в модулях (читать полностью)
